aha (0.4.6-2) UNRELEASED; urgency=low

  * Bump debhelper compatibility to 9
    - Update versioned debhelper build dependency

 -- Axel Beckert <abe@debian.org>  Mon, 20 May 2013 19:57:39 +0200

aha (0.4.6-1) experimental; urgency=low

  * New upstream release
  * Update watch file to also look at GitHub
  * Enable hardening build flags
    - Cherry-pick bf5ed98 (Honor common compiler and linker flags) from
      upstream
    - Add build-dependency on dpkg-dev (>= 1.16.1~)
  * Add patch to fix several hyphen-used-as-minus-sign issues
  * Explicitly refer to LGPL version (or later) in debian/copyright as
    stated by upstream on IRC. Fixes lintian warning
    copyright-refers-to-symlink-license.
  * Bump Standards-Version to 3.9.3 (no changes)
  * Add full text of MPL 1.1 to debian/control
  * Update copyright years in debian/control
  * Fix typo in 0.4.2-1 changelog entry

 -- Axel Beckert <abe@debian.org>  Wed, 01 Aug 2012 18:29:25 +0200

aha (0.4.4-1) unstable; urgency=low

  * New upstream release
    + Fixes issues with underlined and inverse text
  * Fix lintian warning helper-templates-in-copyright
  * Fix lintian warning debian-rules-missing-recommended-target

 -- Axel Beckert <abe@debian.org>  Wed, 31 Aug 2011 23:17:58 +0200

aha (0.4.3-1) unstable; urgency=low

  * New upstream version
    + Fixes typo in man page (Closes: #624233)
  * Bump Standards-Version to 3.9.2 (no changes)

 -- Axel Beckert <abe@debian.org>  Wed, 11 May 2011 23:23:28 +0200

aha (0.4.2-1) unstable; urgency=low

  * New upstream version
    + Includes man page (→ debian/aha.manpages)
  * Better description (Closes: #615913)

 -- Axel Beckert <abe@debian.org>  Wed, 16 Mar 2011 02:04:29 +0100

aha (0.4-1) unstable; urgency=low

  * Initial release (Closes: #605380)

 -- Axel Beckert <abe@debian.org>  Sun, 26 Dec 2010 04:21:17 +0100
